--- a/styles/header.css
+++ b/styles/header.css
@@ -10,7 +10,7 @@ html body header.desktop {
   align-items: center;
   background-color: white;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
-  z-index: 1;
+  z-index: 2;
 }
 
 @media (min-width: 1023px) {
@@ -65,6 +65,9 @@ html body header.desktop nav a:hover:after {
 /*///////////////////////////////////////////////////////*/
 
 html body header.mobile {
+  position: sticky;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 50px;
   padding: 0 20px;
@@ -73,7 +76,7 @@ html body header.mobile {
   align-items: center;
   background-color: white;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
-  z-index: 1;
+  z-index: 2;
 }
 
 @media (min-width: 1023px) {
@@ -89,6 +92,7 @@ html body header.mobile .logo {
 }
 
 html body header.mobile .menu {
+  cursor: pointer;
   display: flex;
   height: 50%;
   object-fit: contain;
@@ -100,7 +104,7 @@ html body nav.mobile {
   top: 50px;
   right: -50px;
   width: 0px;
-  height: fit-content;
+  height: 100%;
   padding: 25px;
   display: flex;
   flex-direction: column;
@@ -108,6 +112,12 @@ html body nav.mobile {
   gap: 2rem;
   transition: width 0.3s ease-out, right 0.3s ease-out;
   background: linear-gradient(90deg, rgba(48, 41, 132, 1) 0%, rgba(210, 33, 60, 1) 100%);
+  z-index: 2;
+}
+@media (min-width: 1024px) {
+  html body nav.mobile {
+    display: none;
+  }
 }
 
 html body nav.mobile a {
