--- a/styles/apropos.css
+++ b/styles/apropos.css
@@ -94,5 +94,6 @@ html body #apropos #infosContainer .infoContainer .info h3 {
 
 html body #apropos #infosContainer .infoContainer .info p {
   color: #919191;
-  text-align: center;
+  text-align: justify;
+  /*text-align: center;*/
 }
